Fix for too big H1 and H2

--- a/app/public/css/editor.css
+++ b/app/public/css/editor.css
@@ -97,3 +97,8 @@ input[type=checkbox]:checked~.tile-checked:after {
     font-size: 24px;
     font-weight: bold;
 }
+
+h1,
+h2 {
+    font-size: 2rem;
+}
